--- a/bungee/pom.xml
+++ b/bungee/pom.xml
@@ -84,12 +84,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.imaginarycode.minecraft/RedisBungee -->
         <dependency>
             <groupId>com.imaginarycode.minecraft</groupId>
             <artifactId>RedisBungee</artifactId>
-            <version>0.3.6-SNAPSHOT</version>
-            <scope>provided</scope>
+            <version>0.6.5</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.bstats</groupId>
